# docker-backupper

./: .gitignore  config.example.yml  cron.sh.template  pyproject.toml  run.sh  typecheck.sh
src/: App.py  config.py  main.py  paths.py  typehints.py
src/backuppers/: Backupper.py  Docker.py
src/backuppers/databases/: Mongo.py  MySQL.py  Postgres.py  Redis.py  __init__.py
src/backuppers/mounts/: Bind.py  Volume.py  __init__.py
src/backuppers/services/: GitLab.py  MinIO.py  RabbitMQ.py  __init__.py
src/cleaners/: Cleaner.py  FTPCleaner.py  LocalCleaner.py  RSyncCleaner.py  __init__.py
src/commands/: __init__.py  backup.py  clear_mattermost_messages.py  ftp_backup.py  gitlab.py  minio.py  mongo.py  mount.py  mysql.py  postgres.py  prune.py  rabbitmq.py  redis.py  rsync_backup.py  run_ftp_cleaner.py  run_local_cleaner.py  run_rsync_cleaner.py
src/loggers/: FileLogger.py  LogManager.py  Logger.py
src/mirrors/: FTP.py  Mirror.py  RSync.py  __init__.py
src/notifiers/: Email.py  Mattermost.py  Notifier.py  NotifyManager.py  __init__.py
